Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7242

Dcheck fails in width_bucket() function

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 3.1.0
    • Impala 3.1.0
    • Backend
    • None

    Description

      The following query hits a DCHECK:

      select width_bucket(cast(-0.10 as decimal(37,30)), cast(-0.36028797018963968 as decimal(25,25)), cast(9151517.4969773200562764155787276999832 as decimal(38,31)), 1328180220)

      Failed check:

      math-functions-ir.cc:566] Check failed: overflow == false (1 vs. 0)

      Attachments

        Issue Links

          Activity

            People

              anujphadke Anuj Phadke
              tarasbob Taras Bobrovytsky
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: